// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should be rendered properly 1`] = `
<div class="webhook-info">
  <div class="webhook-info__content">
    <div class="webhook-info__content__inline">
      <div class="unnnic-select webhook-info__content__method">
        <p class="unnnic-form__label"> Method </p><span data-v-6fe2671f="" class="dropdown"><div data-v-8d0754d6="" style="position: relative;" readonly="readonly" data-v-6fe2671f=""><input data-v-a95503a2="" data-v-8d0754d6="" type="text" size="3" readonly="readonly" placeholder="" iconright="arrow-button-down-1" iconrightclickable="true" class="input size-md normal has-icon-right"><!----><span data-v-12da8e0b="" data-v-8d0754d6="" class="icon-right unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-dark"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z" fill="#3B414D" class="primary"></path></svg></span>
      </div>
      <option data-v-6fe2671f="">GET</option>
      <option data-v-6fe2671f="">POST</option>
      <option data-v-6fe2671f="">PUT</option>
      <option data-v-6fe2671f="">PATCH</option>
      <option data-v-6fe2671f="">DELETE</option>
      <div data-v-6fe2671f="" class="dropdown-data" style="position: fixed; top: 0px;"></div></span>
      <!---->
    </div>
    <div data-v-9ef23630="" class="webhook-info__content__url unnnic-form md" pattern="https?:\\/\\/(www\\.)?[-a-zA-Z0-9@:%._\\+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()!@:%_\\+.~#?&amp;\\/\\/=]*)">
      <p data-v-9ef23630="" class="unnnic-form__label">Webhook URL</p>
      <div data-v-8d0754d6="" data-v-9ef23630="" style="position: relative;" v-bind="[object Object]" mask="" class="unnnic-form-input"><input data-v-a95503a2="" data-v-8d0754d6="" type="url" size="0" v-bind="[object Object]" pattern="https?:\\/\\/(www\\.)?[-a-zA-Z0-9@:%._\\+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()!@:%_\\+.~#?&amp;\\/\\/=]*)" placeholder="URL" class="input size-md normal">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div>
    <p class="unnnic-label__label">Headers</p>
    <div class="webhook-info__content__headers-container">
      <div class="webhook-info__content__headers-element">
        <div data-v-9ef23630="" class="webhook-info__content__headers-element--key unnnic-form md">
          <!---->
          <div data-v-8d0754d6="" data-v-9ef23630="" style="position: relative;" v-bind="[object Object]" mask="" class="unnnic-form-input"><input data-v-a95503a2="" data-v-8d0754d6="" type="text" size="13" v-bind="[object Object]" placeholder="Key" class="input size-md normal">
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <div data-v-9ef23630="" class="webhook-info__content__headers-element--value unnnic-form md">
          <!---->
          <div data-v-8d0754d6="" data-v-9ef23630="" style="position: relative;" v-bind="[object Object]" mask="" class="unnnic-form-input"><input data-v-a95503a2="" data-v-8d0754d6="" type="text" size="9" v-bind="[object Object]" placeholder="Value" class="input size-md normal">
            <!---->
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div class="webhook-info__content__headers-element">
        <div data-v-9ef23630="" class="webhook-info__content__headers-element--key unnnic-form md">
          <!---->
          <div data-v-8d0754d6="" data-v-9ef23630="" style="position: relative;" v-bind="[object Object]" mask="" class="unnnic-form-input"><input data-v-a95503a2="" data-v-8d0754d6="" type="text" size="0" v-bind="[object Object]" placeholder="Key" class="input size-md normal">
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <div data-v-9ef23630="" class="webhook-info__content__headers-element--value unnnic-form md">
          <!---->
          <div data-v-8d0754d6="" data-v-9ef23630="" style="position: relative;" v-bind="[object Object]" mask="" class="unnnic-form-input"><input data-v-a95503a2="" data-v-8d0754d6="" type="text" size="0" v-bind="[object Object]" placeholder="Value" class="input size-md normal">
            <!---->
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
<div class="webhook-info__buttons"><button data-v-00f478da="" class="webhook-info__buttons__cancel unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--">
    <!---->
    <!---->
    <!----><span data-v-00f478da="" class="unnnic-button__label"> Configure later </span>
    <!---->
  </button> <button data-v-00f478da="" class="webhook-info__buttons__save unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--">
    <!---->
    <!---->
    <!----><span data-v-00f478da="" class="unnnic-button__label"> Save changes </span>
    <!---->
  </button></div>
</div>
`;

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should call errorModal if update fails 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "alert-circle-1",
          "position": "bottom-right",
          "scheme": "feedback-red",
          "text": "Error while trying to update webhook data",
          "title": "Error",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should call errorModal if url is empty 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "alert-circle-1",
          "position": "bottom-right",
          "scheme": "feedback-red",
          "text": "Provided Webhook URL cannot be empty",
          "title": "Error",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should call errorModal if url is invalid 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "alert-circle-1",
          "position": "bottom-right",
          "scheme": "feedback-red",
          "text": "Provided Webhook URL is invalid",
          "title": "Error",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should call updateAppConfig with desired fields 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "check-circle-1-1",
          "position": "bottom-right",
          "scheme": "feedback-green",
          "text": "Successfully updated Webhook configuration",
          "title": "Success",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`components/config/channels/whatsapp/components/tabs/WebhookTab.vue should ensure that only one empty header exists at a time 1`] = `
Array [
  Object {
    "key": "Content-Type",
    "value": "application/json",
  },
  Object {
    "key": "",
    "value": "",
  },
]
`;
